Fixed non-collapsed margin on header and nav

--- a/project/css/style.css
+++ b/project/css/style.css
@@ -21,7 +21,7 @@ img {
 header {
 	background: #3c5360 url('../images/header-bg-pattern.png') repeat top left;
 	width: 100%;
-	display: inline-block;
+	height: 72px;
 }
 
 #headerContainer {
@@ -42,7 +42,6 @@ nav {
 	width: 100%;
 	height: 34px;
 	position: relative;
-	display: inline-block;
 }
 
 #navContainer {
